<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <androidx.core.widget.NestedScrollView

        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@id/bottom_navigation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/birdName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alt_bold"
            android:text="Владимир Жириновский"
            android:layout_marginLeft="23dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="40dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="37dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/latinName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="23dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="Vladimirus Jirinovius"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/birdCircle"
            tools:layout_editor_absoluteX="73dp"
            android:layout_marginStart="23dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birdName"  />

        <ImageView
            android:id="@+id/birdCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_bird_circle_huge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latinName" />

        <ImageView
            android:id="@+id/birdImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@id/birdCircle"
            app:layout_constraintLeft_toLeftOf="@id/birdCircle"
            app:layout_constraintRight_toRightOf="@id/birdCircle"
            app:layout_constraintTop_toTopOf="@id/birdCircle" />
        <!--TextView
            android:id="@+id/songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/birdCircle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="27dp"
            android:layout_marginLeft="16dp"
            android:text="@string/songs"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/song_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/songs" /-->
        <TextView
            android:id="@+id/when_to_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/birdCircle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="16dp"
            android:text="@string/when_to_find"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/when_to_find_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/when_to_find"
            app:layout_constraintBottom_toBottomOf="@id/when_to_find"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="38dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Text">
        </TextView>
        <TextView
            android:id="@+id/where_to_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/when_to_find"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="16dp"
            android:text="@string/where_to_find"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white">
        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/where_to_find_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/where_to_find" />
        <TextView
            android:id="@+id/feeder_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/feeder"
            app:layout_constraintBottom_toBottomOf="@id/feeder"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="38dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Text">
        </TextView>
        <TextView
            android:id="@+id/feeder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/where_to_find_list"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="16dp"
            android:text="@string/feeder"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/nesting_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/nesting"
            app:layout_constraintBottom_toBottomOf="@id/nesting"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="38dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Text">
        </TextView>
        <TextView
            android:id="@+id/nesting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/feeder"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="16dp"
            android:text="@string/nesting"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/social_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/social"
            app:layout_constraintBottom_toBottomOf="@id/social"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="38dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Text">
        </TextView>
        <TextView
            android:id="@+id/social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nesting"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="16dp"
            android:text="@string/social"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/habitat_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/habitat"
            app:layout_constraintLeft_toRightOf="@id/habitat"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="38dp"
            android:layout_marginLeft="50dp"
            android:gravity="right"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="Text">
        </TextView>
        <TextView
            android:id="@+id/habitat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/social"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="47dp"
            android:layout_marginLeft="16dp"
            android:text="@string/habitat"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="14sp"
            android:textColor="@color/white">
        </TextView>
        <TextView
            android:id="@+id/migration_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/migration"
            app:layout_constraintBottom_toBottomOf="@id/migration"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="38dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:text="text">
        </TextView>

        <TextView
            android:id="@+id/migration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="47dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/migration"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/habitat" />

        <TextView
            android:id="@+id/yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="47dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/yearly"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/migration">

        </TextView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/yearly_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/yearly"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="22dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView

        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:menu="@menu/bottom_navigation_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        android:background="@color/malure"
        app:itemTextColor="@color/bottom_nav_color"
        app:itemIconTint="@color/bottom_nav_color"
        app:itemTextAppearanceActive="@style/Widget.Design.BottomNavigationView.TextFont"
        app:itemTextAppearanceInactive="@style/Widget.Design.BottomNavigationView.TextFont"
        app:itemIconSize="30dp"
        android:descendantFocusability="blocksDescendants"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>
