<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/placeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserrat_alt_bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/placeImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/distance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeName"
        app:srcCompat="@color/transparent" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeImage"
        android:layout_marginTop="28dp"
        android:layout_marginLeft="18dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/placeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/distance"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="19dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/popularBirdsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_birds"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="42dp"

        android:fontFamily="@font/montserrat_bold"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/findBird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bird_search"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greenMic"
        android:layout_marginRight="18dp"
        android:layout_marginTop="8dp"

        android:fontFamily="@font/montserrat_bold"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/greenMic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintLeft_toLeftOf="@id/findBird"
        app:layout_constraintRight_toRightOf="@id/findBird"
        app:layout_constraintTop_toBottomOf="@id/placeImage"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/ic_greenmic" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/placeType"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="18dp"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:textColor="@color/white"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popularBirds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/popularBirdsTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="9dp"
        android:layout_marginLeft="22dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/rareSightsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rare_sights"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/popularBirds"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="18dp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rareSights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rareSightsTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="22dp">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/wrongSeasonTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_season"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rareSights"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/wrongSeason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrongSeasonTitle"
        android:layout_marginLeft="22dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
